# windows-uiless-ime-demo

./: Cargo.toml  README.md  build.gradle.kts  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
src/: main.rs
src/main/java/tech/tnze/: ComObject.java  Main.java
