[package]
name = "game-ime-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_System_Com",
    "Win32_UI_TextServices",
    "Win32_System_Ole",
    "Win32_System_Variant",
] }
windows-core = "0.62.2"
winit = { version = "0.30.12", features = ["rwh_06"] }
